# WindowsService-AntiReboot

./: CMakeLists.txt  HOW_DO_YOU_FULL_UNINSTALL.md  README.md  install.bat  test-shutdown-attack.bat  uninstall.bat
source-code/common/: IniConfig.hpp  SimpleLogger.hpp  StrUtil.hpp  WinPaths.hpp
source-code/hook/: HookDllMain.cpp  HookInstall.cpp  HookInstall.hpp  HookIpcClient.cpp  HookIpcClient.hpp  HookUninstall.cpp  HookUninstall.hpp
source-code/injector/: GuardInjectorMain.cpp  ProcessUtil.cpp  ProcessUtil.hpp
source-code/service/: GuardPipeServer.cpp  GuardPipeServer.hpp  GuardProcessWatcher.cpp  GuardProcessWatcher.hpp  GuardServiceMain.cpp
source-code/setup/: ShutdownGuardInstallMain.cpp  ShutdownGuardUninstallMain.cpp
source-code/shared/: GuardProtocol.hpp
source-code/ui/: GuardUiMain.cpp  PasswordPromptWindow.cpp  PasswordPromptWindow.hpp
